.k8s/overlays/prod/patch-deployment-mlapi.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlapi # prediction-api
  namespace: sean-koval
spec:
  template:
    spec:
      containers:
        - name: mlapi 
          image: w255mids.azurecr.io/sean-koval/project:b413564  # mlapi image
          resources:
            requests:
              cpu: 1000m
              memory: 1Gi
            limits:
              cpu: 1000m
              memory: 1Gi
          imagePullPolicy: Always
          ports:
            - containerPort: 80 # 8000
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /health
              port: 80 # 8000
            initialDelaySeconds: 20
            periodSeconds: 30
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /health
              port: 80 # 8000
            initialDelaySeconds: 25
            periodSeconds: 30
